src/components/Pages/Homepage/Integrations/Integrations.module.css
.integrations {
  padding: var(--m-5) var(--m-5);
  background-color: #fbfbfc;
  margin-left: -40px;
  margin-right: -40px;

  @media (--md-scr) {
    padding: var(--m-8) var(--m-5);
  }

  &.noBackgroundColor {
    background-color: transparent;
    padding-top: 0;
    padding-left: 0;
    padding-right: 0;
    margin: auto;

    .container {
      padding: unset;
    }

    &.narrowPadding {
      padding-bottom: var(--m-4);
    }
  }
}

.container {
  width: 100%;
  max-width: var(--lp-section-max-width);
  margin: 0 auto;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

.title {
  font-size: var(--fs-header-1);
  line-height: 1.40625;
  margin-bottom: calc(
    var(--ifm-heading-vertical-rhythm-bottom) * var(--ifm-leading)
  );
  @media (max-width: 576px) {
    font-size: 1.5rem;
  }
  @media (--lg-scr) {
    margin-bottom: 2.5rem; /* 40px */
  }
}

.secondaryTitle {
  line-height: 1.5;
  font-size: var(--fs-header-4);
  font-weight: var(--fw-bold);

  @media (--md-scr) {
    font-size: var(--fs-header-3);
  }
}

.mainLink {
  border-radius: var(--m-0-5);
  background-color: var(--color-tonal-neutral-0);
  color: var(--color-foreground-slightly-muted);
  font-weight: var(--fw-regular);
  font-size: var(--fs-text-sm);
  padding: var(--m-1) var(--m-4);
  transition: all 0.2s ease-in-out;

  @media (--md-scr) {
    font-size: var(--fs-text-md);
    padding: var(--fs-text-xs) var(--m-4);
  }

  &:hover {
    text-decoration: none;
    background-color: var(--color-tonal-neutral-1);
    color: var(--color-black);
  }
}

.iconSvg {
  width: 48px;
  height: 48px;
  fill: currentColor;
  color: initial;

  @media (--sm-scr) {
    width: 32px;
    height: 32px;
  }
}
.grid {
  --desktop-column-count: 5;
  display: grid;
  grid-template-columns: 1fr;
  gap: var(--m-2);

  @media (--md-scr) {
    grid-template-columns: repeat(2, 1fr);
  }

  @media (--xl-scr) {
    grid-template-columns: repeat(var(--desktop-column-count), 1fr);
  }
}

.integrationItem {
  --layout: column;
  display: flex;
  flex-direction: var(--layout);
  padding: var(--m-1) var(--m-1) var(--m-2) var(--m-1);
  border-radius: 16px;
  transition: all 0.2s ease-in-out;
  border: 1px solid var(--color-tonal-neutral-0);
  background-color: var(--color-white);
  text-decoration: none;

  &.defaultIcon {
    display: flex;
    flex-direction: column;
    justify-content: center;

    .integrationTitle {
      font-weight: 500;
    }
  }

  &.rowLayout {
    padding-right: 20px;
    padding-bottom: var(--m-1);
  }

  .integrationItemContent {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;

    &.hasDescription {
      gap: 4px;
      padding: 0 var(--m-2);
      justify-content: flex-start;
      text-align: left;

      &.rowLayout {
        gap: 0;
        padding: 0 0 var(--m-1-5) 20px;
        .integrationTitle {
          margin-top: var(--m-1-5);
        }

        .integrationDescription {
          font-size: var(--fs-text-lg);
          color: var(--color-foreground-muted);

          @media (--md-scr) {
            font-size: var(--fs-text-xl);
          }
        }
      }
    }
  }

  &:hover {
    background: var(--color-white);
    box-shadow: var(--lp-box-shadow);
    border-color: rgba(0, 0, 0, 0);
  }
}

.integrationIcon {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 8px;
  min-height: 96px;
  max-height: 96px;

  &.defaultIcon {
    width: 48px;
    height: 48px;
    margin: 0 auto;
    min-height: unset;
    max-height: unset;
    background-color: var(--color-tonal-neutral-0);
    .iconSvg {
      width: 24px;
      height: 24px;
    }
  }

  &.iconRow {
    height: max-content;
    min-height: unset;
    max-height: unset;
    padding: 20px;
    .iconSvg {
      width: 40px;
      height: 40px;
    }
  }
}

.integrationTitle {
  font-size: var(--fs-header-4);
  font-weight: var(--fw-bold);
  color: var(--color-text);
  margin-top: var(--m-2);
  margin-bottom: 0;
  font-family: var(--font-base);
  line-height: 1.5;
  text-decoration: none;
  display: block;
  transition: color 0.2s ease-in-out;

  @media (max-width: 576px) {
    font-size: 1rem;
  }
}

.integrationItem:hover {
  text-decoration: none;

  .integrationTitle {
    color: var(--color-dark-purple);
  }
}

.integrationDescription {
  font-size: 13px;
  margin: 0;
  color: var(--color-foreground-slightly-muted);
  line-height: 1.5;
  font-family: var(--font-base);
  transition: color 0.2s ease-in-out;

  @media (--md-scr) {
    font-size: 15px;
  }
}

.integrationItem:hover .integrationDescription {
  color: var(--color-text);
}

.additionalLinks {
  margin-top: var(--m-2);
  padding: var(--m-2) var(--m-4);
  background-color: #fbfbfc;
  border-radius: 12px;
  display: flex;
  flex-direction: column;

  .additionalLinksTitle {
    margin-right: var(--m-3);
    margin-bottom: 0;
    font-weight: var(--fw-bold);
  }

  .additionalLinksList {
    list-style: none;
    display: flex;
    flex-direction: column;
    margin-bottom: 0;
    padding-left: 0;

    & > li {
      padding: 6px 0;
      margin: 0;
      &:last-child {
        padding-bottom: 0;
      }

      & > a {
        display: flex;
        align-items: center;
        color: var(--color-dark-purple);
        font-weight: 500;

        svg {
          margin-right: 6px;
        }
      }
    }
  }

  @media (--md-scr) {
    flex-direction: row;
    align-items: center;

    .additionalLinksList {
      flex-direction: row;
      gap: 54px;

      & > li {
        &:last-child {
          padding-bottom: 6px;
        }
      }
    }
  }
}

